# Pokemon-Terminal

./: .npmignore  Makefile  README.md  package.json  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/releases/: v2.0.0.md
pages/: index.html
pokemonterminal/: __init__.py  main.py  slideshow.py
pokemonterminal/Data/: pokemon.txt
pokemonterminal/Images/: ImageBrightnessFinder.py  Image_Brightness_Finder.py  PokemonClassTest.py  Pokemon_API_Test.py  Pokemon_Compiled_Info  Pokemon_Compiled_Info.txt  Pokemon_Compiled_Info_Log.txt  Pokemon_File_Renamer  Pokemon_GIMP_Image_Generator_Test  Pokemon_Identification_Classes  Pokemon_Identification_Classes.py  Pokemon_Image_Background_Remover  Pokemon_Image_Background_Remover.py  Pokemon_Image_Brightness_Finder.py  Pokemon_Image_Generator  Pokemon_Image_Generator.py  Pokemon_Image_Mean_Colour_Finder.py  Pokemon_Image_Mean_Colour_Test.py  Pokemon_Image_Renamer  Pokemon_Image_Renamer.py  Pokemon_Info_Compiler  Pokemon_Info_Compiler.py  Pokemon_Info_Compiler_Test.py  Pokemon_Mega_And_Regional_Type_Variations.py  Pokemon_Search_Input.py  Pokemon_Type_True_False_Test
pokemonterminal/terminal/adapters/: kitty.py
pokemonterminal/wallpaper/adapters/: hyprland.py
scripts/: kitty_autoload.py  kitty_setup.py
tests/: test_kitty_adapter.py  test_kitty_autoload.py  test_kitty_setup_script.py  test_main.py
